--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "5.55.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "10.4.14",
+    "daisyui": "3.5.0",
     "eslint": "latest",
     "eslint-plugin-react": "7.30.0",
+    "postcss": "8.4.27",
+    "tailwindcss": "3.3.3",
     "typescript": "^4.9.3",
     "vite": "^4.2.2",
     "vite-plugin-css-injected-by-js": "3.1.0"
